Fix crashes when using debug versions of Qt

Rewrite the logic of sourceDataChanged which was fundamentally broken
This was potentially emitting onDataChanged on the invalid QModelIndex,
especially now we use a flat model in the filtered view

REVIEW: 109726
BUG: 300600