KTp/Models/contacts-model.cpp
@@ -142,6 +142,11 @@ void KTp::ContactsModel::updateGroupProxyModels()
 
     switch (d->groupMode) {
     case NoGrouping:
+        //This is a workaround to a Qt assert which gets confused when we switch from a source model that was
+        //part of the proxy chain, and is now used in the view directly
+        //
+        //do not disable until you have tested on Qt in debug mode
+        setSourceModel(0);
         setSourceModel(modelToGroup);
         break;
     case AccountGrouping:
